--- a/WebSiteTest/PageTest/views/musicians.html
+++ b/WebSiteTest/PageTest/views/musicians.html
@@ -3,6 +3,8 @@
 <div ng-show="musicians">
     Musicians
     <div>
-        <a href="#"><img src="../images/EarBuds.png" alt="" /></a>
+        <a href="#"><img src="../images/EarBuds-70.png" height="902" width ="502 "alt="" /></a>
     </div>
 </div>
+
+
