--- a/WebSiteTest/PageTest/views/home.html
+++ b/WebSiteTest/PageTest/views/home.html
@@ -3,7 +3,7 @@
     <div class="row">
 
         <!-- Front page info Column-->
-        <div id="earInfo" class="col-xs-12 col-md-8">
+        <div class="col-xs-12 col-md-8">
             <div id="home-page-info" class="info">
                 <div class="well">
                     <div class="jumbotron">
