In demo mode rn

--- a/WebSiteTest/PageTest/views/home.html
+++ b/WebSiteTest/PageTest/views/home.html
@@ -11,7 +11,9 @@
                         <h2>EarBuds helps you meet high school musicians in your area.</h2>
                         <p>
                             Whether you want to jam, start a casual band, or play paid gigs,
-                            EarBuds will help you find what you're looking for.
+                            EarBuds will help you find what you're looking for. Connect your 
+                            SoundCloud account to your EarBud account for a safe and easy way
+                            to find other musicians and music events around you. 
                         </p>
                     </div>
                 </div>
@@ -22,12 +24,7 @@
         <div class="col-xs-12 col-md-4">
             <div class="well">
                 <h2>Sign up.</h2>
-                <form>
-                    Email: <input type="text" name="email"><br /><br />
-                    Password: <input type="text" name="password"><br /><br />
-                    Username: <input type="text" name="username"><br /><br />
-                    Age: <input type="number" name="age"> <br /><br />
-                </form>
+                <iframe src="https://soundcloud.com/connect?state=SoundCloud_Dialog_69fa7&client_id=609ae0b573913db156968e0ec38c1e26&redirect_uri=http%3A%2F%2Fdevelopers.soundcloud.com%2Fcallback.html&response_type=code_and_token&scope=non-expiring&display=popup"></iframe>
             </div>
         </div>
 
