--- a/WebSiteTest/PageTest/views/musicians.html
+++ b/WebSiteTest/PageTest/views/musicians.html
@@ -1,10 +1,75 @@
 ﻿
 
 <div ng-show="musicians">
-    Musicians
-    <div>
-        <a href="#"><img src="../images/EarBuds-70.png" height="902" width ="502 "alt="" /></a>
-    </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-3 col-md-2 sidebar">
+                    <ul class="nav nav-sidebar">
+                        <li class="active"><a href="#musicians">All Musicians</a></li>
+                        <li><a href="#musicians/jazz">Jazz</a></li>
+                        <li><a href="#musicians/genre">Rock</a></li>
+                        <li><a href="#musicians/genre">Blues</a></li>
+                        <li><a href="#musicians/genre">Alternative</a></li>
+                        <li><a href="#musicians/genre">Hip Hop</a></li>
+                        <li><a href="#musicians/genre">R&B</a></li>
+                        <li><a href="#musicians/genre">Classical</a></li>
+                        <li><a href="#musicians/genre">Drum and Bass</a></li>
+                        <li><a href="#musicians/genre">Electronic</a></li>
+                        <li><a href="#musicians/genre">Game and Film Audio</a></li>
+                        <li><a href="#musicians/genre">Singer/Songwriters</a></li>
+                        <li><a href="#musicians/genre">Composers</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-2 main">
+                    <h1 class="page-header">Musicians in your area</h1>
+
+                    <div class="row-placeholders">
+                        <div class="col-xs-6 col-sm-3">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/156639621&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Maya Acharya</a></h4>
+                            <span class="text-muted">Los Altos, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/65527504&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician</h4>
+                            <span class="text-muted">Los Altos, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/92657895&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician2</h4>
+                            <span class="text-muted">Mountain View, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/26546745&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Dogcatcher (band)</h4>
+                            <span class="text-muted">Mountain View, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician3</h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician4</h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician5</h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4>Example Musician6</h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+         </div>
+
 </div>
 
 
