--- a/WebSiteTest/PageTest/views/profile.html
+++ b/WebSiteTest/PageTest/views/profile.html
@@ -1,5 +1,134 @@
 ﻿
-
 <div ng-show="profile">
-    Profile page
+    <div class="container theme-showcase" role="main">
+
+
+            <div class="col-xs-6">
+                <iframe height="100%" width="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/156639621&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                <h4>Maya Acharya</h4>
+                <span class="text-muted">Los Altos, CA</span>
+            </div>
+        <div class="page-header">
+            <h3>About Maya Acharya</h3>
+        </div>
+        <p>
+            <button type="button" class="btn btn-primary">Guitar</button>
+            <button type="button" class="btn btn-primary">Piano</button>
+
+        </p>
+        <p>
+            <button type="button" class="btn btn-xs btn-info">Jazz</button>
+            <button type="button" class="btn btn-xs btn-info">Rock</button>
+            <button type="button" class="btn btn-xs btn-info">Classical</button>
+            <button type="button" class="btn btn-xs btn-info">Blues</button>
+            <button type="button" class="btn btn-xs btn-info">Composition</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-xs btn-default">LAHS Jazz</button>
+            <button type="button" class="btn btn-xs btn-default">Chocolate Heads</button>
+            <button type="button" class="btn btn-xs btn-default">Bay Area Open Mic</button>
+
+        </p>
+
+        <div class="page-header">
+            <h1>Musician Resume</h1>
+        </div>
+        <div class="row">
+            <div class="col-sm-4">
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Musician Background</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Current Projects</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div><!-- /.col-sm-4 -->
+            <div class="col-sm-4">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel title</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+                <div class="panel panel-info">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel title</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div><!-- /.col-sm-4 -->
+            <div class="col-sm-4">
+                <div class="panel panel-warning">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel title</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+                <div class="panel panel-danger">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Panel title</h3>
+                    </div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+                </div>
+            </div><!-- /.col-sm-4 -->
+        </div>
+
+
+
+        <div class="page-header">
+            <h1>Wells</h1>
+        </div>
+        <div class="well">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
+        </div>
+
+
+
+        <div class="page-header">
+            <h1>Carousel</h1>
+        </div>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide">
+                </div>
+                <div class="item">
+                    <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide">
+                </div>
+                <div class="item">
+                    <img data-src="holder.js/1140x500/auto/#555:#333/text:Third slide" alt="Third slide">
+                </div>
+            </div>
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+
+
+    </div> 
 </div>
