--- a/WebSiteTest/PageTest/views/musicians.html
+++ b/WebSiteTest/PageTest/views/musicians.html
@@ -31,39 +31,80 @@
                         </div>
                         <div class="col-xs-6 col-sm-3">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/65527504&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician</h4>
+                            <h4><a href="#profile">Example Musician</a></h4>
                             <span class="text-muted">Los Altos, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/92657895&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician2</h4>
+                            <h4><a href="#profile">Example Musician2</a></h4>
                             <span class="text-muted">Mountain View, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3 placeholder">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/26546745&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Dogcatcher (band)</h4>
+                            <h4><a href="#profile">Dogcatcher (band)</a></h4>
                             <span class="text-muted">Mountain View, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3 placeholder">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician3</h4>
+                            <h4><a href="#profile">Example Musician3</a></h4>
                             <span class="text-muted">Palo Alto, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3 placeholder">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician4</h4>
+                            <h4><a href="#profile">Example Musician4</a></h4>
                             <span class="text-muted">Palo Alto, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3 placeholder">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician5</h4>
+                            <h4><a href="#profile">Example Musician5</a></h4>
                             <span class="text-muted">Palo Alto, CA</span>
                         </div>
                         <div class="col-xs-6 col-sm-3 placeholder">
                             <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-                            <h4>Example Musician6</h4>
+                            <h4><a href="#profile">Example Musician6</a></h4>
                             <span class="text-muted">Palo Alto, CA</span>
                         </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician7</a></h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician8</a></h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician9</a></h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician10</a></h4>
+                            <span class="text-muted">Palo Alto, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician11</a></h4>
+                            <span class="text-muted">San Jose, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician12</a></h4>
+                            <span class="text-muted">Sunnyvale, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician13</a></h4>
+                            <span class="text-muted">San Francisco, CA</span>
+                        </div>
+                        <div class="col-xs-6 col-sm-3 placeholder">
+                            <iframe width="100%" height="width" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/102811289&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+                            <h4><a href="#profile">Example Musician14</a></h4>
+                            <span class="text-muted">San Francisco, CA</span>
+                        </div>
+
 
                     </div>
                 </div>
