--- a/WebSiteTest/PageTest/css/earBudsApp.css
+++ b/WebSiteTest/PageTest/css/earBudsApp.css
@@ -2,6 +2,14 @@
   padding-top: 64px;
 }
 
-#connect{
-    
+.soundbutton{
+ height:50px;
+ width:120px;
+ border-color:#6495ED;
+ background-color:#BCD2EE;
+ border-style: 2px solid blue;
+ border-radius:5px;
+ margin:auto;
+ text-align:center;
+ color:purple;
 }
