--- a/WebSiteTest/PageTest/views/home.html
+++ b/WebSiteTest/PageTest/views/home.html
@@ -7,8 +7,8 @@
             <div id="home-page-info" class="info">
                 <div class="well">
                     <div class="jumbotron">
-                        <h1>Start a band.</h1>
-                        <h2>EarBuds helps you meet high school musicians in your area.</h2>
+                        <h1>Let's make some music.</h1>
+                        <h2>EarBuds helps you meet musicians in your area.</h2>
                         <p>
                             Whether you want to jam, start a casual band, or play paid gigs,
                             EarBuds will help you find what you're looking for. Connect your 
@@ -24,7 +24,18 @@
         <div class="col-xs-12 col-md-4">
             <div class="well">
                 <h2>Sign up.</h2>
-                <iframe src="https://soundcloud.com/connect?state=SoundCloud_Dialog_69fa7&client_id=609ae0b573913db156968e0ec38c1e26&redirect_uri=http%3A%2F%2Fdevelopers.soundcloud.com%2Fcallback.html&response_type=code_and_token&scope=non-expiring&display=popup"></iframe>
+                <form>
+                    First name: <input type="text" name="firstname" /><br><br>
+                    Last name: <input type="text" name="lastname" /><br><br>
+                    Email: <input type="text" name="email" /><br><br>
+                    City:<input type="text" name="city" /><br><br>
+                    State:<input type="text" name="state" /><br><br>
+                    Primary Instrument:<input type="text" name="instrument" /><br><br>
+                    Age:<input type="text" name="instrument" /><br><br>
+                </form>
+                    <div id="soundbutton">
+                        <a href="http://earbuds.azurewebsites.net/#/register">Connect with <span>SoundCloud!</span></a>
+                    </div>                
             </div>
         </div>
 
