--- a/WebSiteTest/PageTest/views/profile.html
+++ b/WebSiteTest/PageTest/views/profile.html
@@ -40,7 +40,7 @@
                         <h3 class="panel-title">Musician Background</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        This is where the musician's background info goes. 
                     </div>
                 </div>
                 <div class="panel panel-primary">
@@ -48,38 +48,40 @@
                         <h3 class="panel-title">Current Projects</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        This is where users write about their current music projects. 
                     </div>
                 </div>
             </div><!-- /.col-sm-4 -->
             <div class="col-sm-4">
-                <div class="panel panel-success">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel title</h3>
+                        <h3 class="panel-title">Current groups</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        This is where users write about the groups they are a part of
+                        and their roles in the groups.
                     </div>
                 </div>
                 <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel title</h3>
+                        <h3 class="panel-title">Skills</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        This is where users describe their musical and music related skills
                     </div>
                 </div>
             </div><!-- /.col-sm-4 -->
             <div class="col-sm-4">
-                <div class="panel panel-warning">
+                <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Panel title</h3>
+                        <h3 class="panel-title">Looking for</h3>
                     </div>
                     <div class="panel-body">
-                        Panel content
+                        This is where the user writes about what they are looking for,
+                        whether they're looking for a bass player, a band to join, or gigs. 
                     </div>
                 </div>
-                <div class="panel panel-danger">
+                <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">Panel title</h3>
                     </div>
@@ -88,45 +90,6 @@
                     </div>
                 </div>
             </div><!-- /.col-sm-4 -->
-        </div>
-
-
-
-        <div class="page-header">
-            <h1>Wells</h1>
-        </div>
-        <div class="well">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Aenean lacinia bibendum nulla sed consectetur.</p>
-        </div>
-
-
-
-        <div class="page-header">
-            <h1>Carousel</h1>
-        </div>
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="item active">
-                    <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide">
-                </div>
-                <div class="item">
-                    <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide">
-                </div>
-                <div class="item">
-                    <img data-src="holder.js/1140x500/auto/#555:#333/text:Third slide" alt="Third slide">
-                </div>
-            </div>
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-            </a>
         </div>
 
 
