Added presentation pdf

--- a/WebSiteTest/PageTest/views/profile.html
+++ b/WebSiteTest/PageTest/views/profile.html
@@ -89,7 +89,7 @@
                         Panel content
                     </div>
                 </div>
-            </div><!-- /.col-sm-4 -->
+            </div>
         </div>
 
 
